# elementary-logic-validator

./: .editorconfig  404.md  Cargo.toml  README.md
.github/workflows/: deploy.yaml
language/: Cargo.toml
language-derivation-rule/: Cargo.toml
language-derivation-rule/src/: lib.rs
language-derivation-rule/src/ast/: rule.rs
language-derivation-rule/src/parser/: expression.rs  rule.rs
language/src/: lib.rs
language/src/ast/: exp.rs  mod.rs
language/src/parser/: individual_constant.rs  mod.rs  symbol.rs  util.rs
playground/: Cargo.toml  index.html
playground/src/: main.rs
playground/src/component/table/: mod.rs  parser.rs  state.rs
playground/src/component/table/component/: row.rs
playground/src/hooks/: mod.rs  use_memo.rs
playground/src/pages/: home.rs  mod.rs  not_found.rs
playground/src/pages/help/: mod.rs
playground/src/pages/help/pages/: home.rs
