[package]
name = "elementary-logic-validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
language = { path = "../language" }
language-derivation-rule = { path = "../language-derivation-rule" }

yew = "0.19"
yew-router = "0.16"
itertools = "0.10"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
log = "0.4.6"
wasm-logger = "0.2.0"
regex = "1"
lazy_static = "1.4"
cached = { version = "0.40", features = ["wasm"] }
